# ros_fruit_project

./: .gitignore  README.md
src/fruit/: package.xml  setup.cfg  setup.py
src/fruit/config/: price_table.yaml  targets.yaml  yolo_config.yaml
src/fruit/config/moveit_config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  robot.srdf
src/fruit/config/yolo_model/: classes.yaml
src/fruit/fruit/api/: parameter_server.py  robot_control_server.py
src/fruit/fruit/camera/: __init__.py  camera_streamer.py  camera_streamer_gstreamer.py  camera_streamer_redis.py  camera_streamer_websocket.py  camera_streamer_zeromq.py  camera_viewer.py  ceiling_camera_viewer.py
src/fruit/fruit/dashboard/: __init__.py
src/fruit/fruit/db/: mydb.db
src/fruit/fruit/manipulation/: __init__.py  gripper_control.py  moveit_interface.py  pick_and_place.py  trajectory_controller.py
src/fruit/fruit/order/: __init__.py  order_manager.py
src/fruit/fruit/perception/: __init__.py  camera_node.py  yolo_detector.py
src/fruit/fruit/spawner/: __init__.py  fruit_spawner.py
src/fruit/fruit/weighing/: __init__.py  price_calculator.py  scale_plugin.cc
src/fruit/launch/: ceiling_camera.launch.py  fruit_spawner.launch.py  full_system.launch.py  gazebo_world.launch.py  manipulation_gazebo.launch.py  moveit_planning.launch.py
src/fruit/models/ceiling_camera/: model.config  model.sdf
src/fruit/scripts/: record_trajectory.py  replay_trajectory.py  spawn_dae_fruit.py  spawn_from_sdf.py  spawn_fruits_simple.py  spawn_real_fruits.py
(+39 files in other folders)
